fix <pre> overflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -115,6 +115,7 @@ footer {
   padding: 0px;
 }
 pre {
+  overflow: auto;
   padding: 20px;
   background-color: lightgrey;
 }
